--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-swipeable-views": "0.13.9"
   },
   "scripts": {
-    "start": "set PORT=3050 && react-scripts start",
+    "start": "PORT=3110 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
